--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<script src="script.js"></script>
+		<div id="root"></div>
+		<script type="module" src="script.js"></script>
 	</body>
 </html>
